--- a/app/index.html
+++ b/app/index.html
@@ -9,22 +9,26 @@
     <title>Components</title>
 </head>
 <body>
+    <div class="container">
+        <div class="buttons">
+            <h1 class="main-title">Buttons</h1>
+            <a href="#" class="btn">Action</a>
+            <a href="#" class="btn primary-btn">Primary Action</a>
+            <a href="#" class="btn secondary-btn">Secondary Action</a>
+        </div>
 
-
-    <h1 class="main-title">Buttons</h1>
-    <a href="#" class="btn">Action</a>
-    <a href="#" class="btn primary-btn">Action</a>
-    <a href="#" class="btn secondary-btn">Action</a>
-
-    <h1 class="main-title">Typografie</h1>
-    <h1 class="title h1-title">h1 title</h1>
-    <p class="paragraaf-preview">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptates dignissimos adipisci reiciendis sunt. Corporis esse eligendi suscipit nesciunt, perferendis impedit aperiam perspiciatis dolorum ipsam, reprehenderit commodi repudiandae aspernatur velit!</p>
-    <h2 class="title h2-title">h2 title</h2>
-    <p class="paragraaf-preview">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit consectetur provident magni, illo dolores in culpa amet quaerat iste sint ex esse aut blanditiis at error velit veritatis aliquam incidunt.</p>
-    <h3 class="title h3-title">h3 title</h3>
-    <p class="paragraaf-preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt ex laborum eaque sit alias facilis, atque consequatur autem rerum quas impedit, pariatur repudiandae iste amet suscipit? Beatae, eaque esse.</p>
-    <p class="paragraaf">Paragraaf</p>
-    <p class="paragraaf-preview">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat necessitatibus eos obcaecati illo quas mollitia sunt ratione, corporis deleniti beatae magni, ex maxime perspiciatis at illum cumque similique consequuntur fuga.</p>
+        <div class="typografie">
+            <h1 class="main-title">Typografie</h1>
+            <h1 class="title h1-title">h1 title</h1>
+            <p class="paragraaf-preview">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptates dignissimos adipisci reiciendis sunt. Corporis esse eligendi suscipit nesciunt, perferendis impedit aperiam perspiciatis dolorum ipsam, reprehenderit commodi repudiandae aspernatur velit!</p>
+            <h2 class="title h2-title">h2 title</h2>
+            <p class="paragraaf-preview">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit consectetur provident magni, illo dolores in culpa amet quaerat iste sint ex esse aut blanditiis at error velit veritatis aliquam incidunt.</p>
+            <h3 class="title h3-title">h3 title</h3>
+            <p class="paragraaf-preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt ex laborum eaque sit alias facilis, atque consequatur autem rerum quas impedit, pariatur repudiandae iste amet suscipit? Beatae, eaque esse.</p>
+            <p class="paragraaf">Paragraaf</p>
+            <p class="paragraaf-preview">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat necessitatibus eos obcaecati illo quas mollitia sunt ratione, corporis deleniti beatae magni, ex maxime perspiciatis at illum cumque similique consequuntur fuga.</p>
+        </div>
+    </div>
 
 </body>
 </html>
